lab-4-ll1-parser-generator/gen/AntlrParser.java
// Generated from D:/Documents/parsers/ll1generator\Antlr.g4 by ANTLR 4.x

    import grammar.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AntlrParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHATEVER=1, GRAMMAR=2, B=3, COLON=4, RARR=5, SKIP=6, SEMICOLON=7, DOT=8, 
		VLINE=9, LBRACE=10, RBRACE=11, SL=12, SR=13, LT=14, GT=15, QM=16, JTypeBound=17, 
		COMMA=18, JPrimitiveType=19, TERMNAME=20, NONTERMNAME=21;
	public static final String[] tokenNames = {
		"<INVALID>", "WHATEVER", "'grammar'", "B", "':'", "'->'", "'skip'", "';'", 
		"'.'", "'|'", "'{'", "'}'", "'['", "']'", "'<'", "'>'", "'?'", "JTypeBound", 
		"','", "JPrimitiveType", "TERMNAME", "NONTERMNAME"
	};
	public static final int
		RULE_antlrGrammar = 0, RULE_grammarTitle = 1, RULE_term = 2, RULE_nonTerm = 3, 
		RULE_attributeList = 4, RULE_attribute = 5, RULE_regex = 6, RULE_ruleBody = 7, 
		RULE_ruleName = 8, RULE_code = 9, RULE_jType = 10, RULE_jClassOrInterfaceType = 11, 
		RULE_jTypeArguments = 12, RULE_jTypeArgument = 13, RULE_jIdentifier = 14;
	public static final String[] ruleNames = {
		"antlrGrammar", "grammarTitle", "term", "nonTerm", "attributeList", "attribute", 
		"regex", "ruleBody", "ruleName", "code", "jType", "jClassOrInterfaceType", 
		"jTypeArguments", "jTypeArgument", "jIdentifier"
	};

	@Override
	public String getGrammarFileName() { return "Antlr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private Grammar grammar;
	    private String gName;

	    private void init() {
	        grammar = new Grammar();
	    }

	    public Grammar getGrammar() {
	        return grammar;
	    }

	    public String getGName() {
	        return gName;
	    }

	public AntlrParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AntlrGrammarContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public NonTermContext nonTerm(int i) {
			return getRuleContext(NonTermContext.class,i);
		}
		public List<NonTermContext> nonTerm() {
			return getRuleContexts(NonTermContext.class);
		}
		public GrammarTitleContext grammarTitle() {
			return getRuleContext(GrammarTitleContext.class,0);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public AntlrGrammarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_antlrGrammar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterAntlrGrammar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitAntlrGrammar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitAntlrGrammar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AntlrGrammarContext antlrGrammar() throws RecognitionException {
		AntlrGrammarContext _localctx = new AntlrGrammarContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_antlrGrammar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 init(); 
			setState(31); grammarTitle();
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TERMNAME || _la==NONTERMNAME) {
				{
				setState(34);
				switch (_input.LA(1)) {
				case NONTERMNAME:
					{
					setState(32); nonTerm();
					}
					break;
				case TERMNAME:
					{
					setState(33); term();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 grammar.finishConstruction(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GrammarTitleContext extends ParserRuleContext {
		public JIdentifierContext jIdentifier;
		public TerminalNode SEMICOLON() { return getToken(AntlrParser.SEMICOLON, 0); }
		public JIdentifierContext jIdentifier() {
			return getRuleContext(JIdentifierContext.class,0);
		}
		public TerminalNode GRAMMAR() { return getToken(AntlrParser.GRAMMAR, 0); }
		public GrammarTitleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_grammarTitle; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterGrammarTitle(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitGrammarTitle(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitGrammarTitle(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GrammarTitleContext grammarTitle() throws RecognitionException {
		GrammarTitleContext _localctx = new GrammarTitleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammarTitle);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41); match(GRAMMAR);
			setState(42); ((GrammarTitleContext)_localctx).jIdentifier = jIdentifier();
			 gName = (((GrammarTitleContext)_localctx).jIdentifier!=null?_input.getText(((GrammarTitleContext)_localctx).jIdentifier.start,((GrammarTitleContext)_localctx).jIdentifier.stop):null); 
			setState(44); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Token TERMNAME;
		public RegexContext regex;
		public TerminalNode RARR() { return getToken(AntlrParser.RARR, 0); }
		public TerminalNode SEMICOLON() { return getToken(AntlrParser.SEMICOLON, 0); }
		public RegexContext regex() {
			return getRuleContext(RegexContext.class,0);
		}
		public TerminalNode SKIP() { return getToken(AntlrParser.SKIP, 0); }
		public TerminalNode TERMNAME() { return getToken(AntlrParser.TERMNAME, 0); }
		public TerminalNode COLON() { return getToken(AntlrParser.COLON, 0); }
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46); ((TermContext)_localctx).TERMNAME = match(TERMNAME);
			setState(47); match(COLON);
			setState(48); ((TermContext)_localctx).regex = regex();
			 boolean skip = false; 
			setState(53);
			_la = _input.LA(1);
			if (_la==RARR) {
				{
				setState(50); match(RARR);
				setState(51); match(SKIP);
				 skip = true; 
				}
			}


			        grammar.add(new Terminal((((TermContext)_localctx).TERMNAME!=null?((TermContext)_localctx).TERMNAME.getText():null), (((TermContext)_localctx).regex!=null?_input.getText(((TermContext)_localctx).regex.start,((TermContext)_localctx).regex.stop):null), skip));
			    
			setState(56); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonTermContext extends ParserRuleContext {
		public Token NONTERMNAME;
		public List<TerminalNode> VLINE() { return getTokens(AntlrParser.VLINE); }
		public TerminalNode SEMICOLON() { return getToken(AntlrParser.SEMICOLON, 0); }
		public TerminalNode SR() { return getToken(AntlrParser.SR, 0); }
		public AttributeListContext attributeList() {
			return getRuleContext(AttributeListContext.class,0);
		}
		public TerminalNode NONTERMNAME() { return getToken(AntlrParser.NONTERMNAME, 0); }
		public RuleBodyContext ruleBody(int i) {
			return getRuleContext(RuleBodyContext.class,i);
		}
		public TerminalNode SL() { return getToken(AntlrParser.SL, 0); }
		public List<RuleBodyContext> ruleBody() {
			return getRuleContexts(RuleBodyContext.class);
		}
		public TerminalNode VLINE(int i) {
			return getToken(AntlrParser.VLINE, i);
		}
		public TerminalNode COLON() { return getToken(AntlrParser.COLON, 0); }
		public NonTermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTerm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterNonTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitNonTerm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitNonTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NonTermContext nonTerm() throws RecognitionException {
		NonTermContext _localctx = new NonTermContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nonTerm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); ((NonTermContext)_localctx).NONTERMNAME = match(NONTERMNAME);

			        List<Attribute> attributes = new ArrayList<>();
			    
			setState(64);
			_la = _input.LA(1);
			if (_la==SL) {
				{
				setState(60); match(SL);
				setState(61); attributeList(attributes);
				setState(62); match(SR);
				}
			}


			        NonTerminal nt = new NonTerminal((((NonTermContext)_localctx).NONTERMNAME!=null?((NonTermContext)_localctx).NONTERMNAME.getText():null), attributes);
			        grammar.add(nt);
			    
			setState(67); match(COLON);
			setState(68); ruleBody(nt);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==VLINE) {
				{
				{
				setState(69); match(VLINE);
				setState(70); ruleBody(nt);
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76); match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeListContext extends ParserRuleContext {
		public List<Attribute> attributes;
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public List<TerminalNode> COMMA() { return getTokens(AntlrParser.COMMA); }
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(AntlrParser.COMMA, i);
		}
		public AttributeListContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AttributeListContext(ParserRuleContext parent, int invokingState, List<Attribute> attributes) {
			super(parent, invokingState);
			this.attributes = attributes;
		}
		@Override public int getRuleIndex() { return RULE_attributeList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterAttributeList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitAttributeList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitAttributeList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeListContext attributeList(List<Attribute> attributes) throws RecognitionException {
		AttributeListContext _localctx = new AttributeListContext(_ctx, getState(), attributes);
		enterRule(_localctx, 8, RULE_attributeList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78); attribute(attributes);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(79); match(COMMA);
				setState(80); attribute(attributes);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributeContext extends ParserRuleContext {
		public List<Attribute> attributes;
		public JTypeContext jType;
		public JIdentifierContext jIdentifier;
		public JTypeContext jType() {
			return getRuleContext(JTypeContext.class,0);
		}
		public JIdentifierContext jIdentifier() {
			return getRuleContext(JIdentifierContext.class,0);
		}
		public AttributeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public AttributeContext(ParserRuleContext parent, int invokingState, List<Attribute> attributes) {
			super(parent, invokingState);
			this.attributes = attributes;
		}
		@Override public int getRuleIndex() { return RULE_attribute; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterAttribute(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitAttribute(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitAttribute(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttributeContext attribute(List<Attribute> attributes) throws RecognitionException {
		AttributeContext _localctx = new AttributeContext(_ctx, getState(), attributes);
		enterRule(_localctx, 10, RULE_attribute);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86); ((AttributeContext)_localctx).jType = jType();
			setState(87); ((AttributeContext)_localctx).jIdentifier = jIdentifier();
			 attributes.add(new Attribute((((AttributeContext)_localctx).jType!=null?_input.getText(((AttributeContext)_localctx).jType.start,((AttributeContext)_localctx).jType.stop):null), (((AttributeContext)_localctx).jIdentifier!=null?_input.getText(((AttributeContext)_localctx).jIdentifier.start,((AttributeContext)_localctx).jIdentifier.stop):null))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegexContext extends ParserRuleContext {
		public TerminalNode WHATEVER() { return getToken(AntlrParser.WHATEVER, 0); }
		public RegexContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regex; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterRegex(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitRegex(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitRegex(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegexContext regex() throws RecognitionException {
		RegexContext _localctx = new RegexContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_regex);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90); match(WHATEVER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleBodyContext extends ParserRuleContext {
		public NonTerminal nt;
		public CodeContext code;
		public List<RuleNameContext> ruleName() {
			return getRuleContexts(RuleNameContext.class);
		}
		public CodeContext code() {
			return getRuleContext(CodeContext.class,0);
		}
		public RuleNameContext ruleName(int i) {
			return getRuleContext(RuleNameContext.class,i);
		}
		public RuleBodyContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RuleBodyContext(ParserRuleContext parent, int invokingState, NonTerminal nt) {
			super(parent, invokingState);
			this.nt = nt;
		}
		@Override public int getRuleIndex() { return RULE_ruleBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterRuleBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitRuleBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitRuleBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleBodyContext ruleBody(NonTerminal nt) throws RecognitionException {
		RuleBodyContext _localctx = new RuleBodyContext(_ctx, getState(), nt);
		enterRule(_localctx, 14, RULE_ruleBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 
			        Rule curRule = new Rule();
			        nt.addRule(curRule);
			    
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TERMNAME || _la==NONTERMNAME) {
				{
				{
				setState(93); ruleName(curRule);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			        if (curRule.size() == 0) {
			             nt.enableEpsRule();
			        }
			    
			setState(103);
			_la = _input.LA(1);
			if (_la==LBRACE) {
				{
				setState(100); ((RuleBodyContext)_localctx).code = code();
				 curRule.setCode(((RuleBodyContext)_localctx).code.c); 
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleNameContext extends ParserRuleContext {
		public Rule curRule;
		public Token TERMNAME;
		public Token NONTERMNAME;
		public TerminalNode TERMNAME() { return getToken(AntlrParser.TERMNAME, 0); }
		public TerminalNode NONTERMNAME() { return getToken(AntlrParser.NONTERMNAME, 0); }
		public RuleNameContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RuleNameContext(ParserRuleContext parent, int invokingState, Rule curRule) {
			super(parent, invokingState);
			this.curRule = curRule;
		}
		@Override public int getRuleIndex() { return RULE_ruleName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterRuleName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitRuleName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitRuleName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleNameContext ruleName(Rule curRule) throws RecognitionException {
		RuleNameContext _localctx = new RuleNameContext(_ctx, getState(), curRule);
		enterRule(_localctx, 16, RULE_ruleName);
		try {
			setState(109);
			switch (_input.LA(1)) {
			case TERMNAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); ((RuleNameContext)_localctx).TERMNAME = match(TERMNAME);
				 curRule.addChild((((RuleNameContext)_localctx).TERMNAME!=null?((RuleNameContext)_localctx).TERMNAME.getText():null)); 
				}
				break;
			case NONTERMNAME:
				enterOuterAlt(_localctx, 2);
				{
				setState(107); ((RuleNameContext)_localctx).NONTERMNAME = match(NONTERMNAME);
				 curRule.addChild((((RuleNameContext)_localctx).NONTERMNAME!=null?((RuleNameContext)_localctx).NONTERMNAME.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeContext extends ParserRuleContext {
		public String c;
		public Token WHATEVER;
		public TerminalNode LBRACE() { return getToken(AntlrParser.LBRACE, 0); }
		public TerminalNode WHATEVER() { return getToken(AntlrParser.WHATEVER, 0); }
		public TerminalNode RBRACE() { return getToken(AntlrParser.RBRACE, 0); }
		public CodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitCode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitCode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeContext code() throws RecognitionException {
		CodeContext _localctx = new CodeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_code);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); match(LBRACE);
			setState(112); ((CodeContext)_localctx).WHATEVER = match(WHATEVER);
			((CodeContext)_localctx).c =  (((CodeContext)_localctx).WHATEVER!=null?((CodeContext)_localctx).WHATEVER.getText():null); 
			setState(114); match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JTypeContext extends ParserRuleContext {
		public List<TerminalNode> SR() { return getTokens(AntlrParser.SR); }
		public TerminalNode JPrimitiveType() { return getToken(AntlrParser.JPrimitiveType, 0); }
		public TerminalNode SR(int i) {
			return getToken(AntlrParser.SR, i);
		}
		public List<TerminalNode> SL() { return getTokens(AntlrParser.SL); }
		public JClassOrInterfaceTypeContext jClassOrInterfaceType() {
			return getRuleContext(JClassOrInterfaceTypeContext.class,0);
		}
		public TerminalNode SL(int i) {
			return getToken(AntlrParser.SL, i);
		}
		public JTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterJType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitJType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitJType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JTypeContext jType() throws RecognitionException {
		JTypeContext _localctx = new JTypeContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_jType);
		int _la;
		try {
			setState(132);
			switch (_input.LA(1)) {
			case TERMNAME:
			case NONTERMNAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(116); jClassOrInterfaceType();
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SL) {
					{
					{
					setState(117); match(SL);
					setState(118); match(SR);
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case JPrimitiveType:
				enterOuterAlt(_localctx, 2);
				{
				setState(124); match(JPrimitiveType);
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SL) {
					{
					{
					setState(125); match(SL);
					setState(126); match(SR);
					}
					}
					setState(131);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JClassOrInterfaceTypeContext extends ParserRuleContext {
		public JIdentifierContext jIdentifier(int i) {
			return getRuleContext(JIdentifierContext.class,i);
		}
		public List<JTypeArgumentsContext> jTypeArguments() {
			return getRuleContexts(JTypeArgumentsContext.class);
		}
		public JTypeArgumentsContext jTypeArguments(int i) {
			return getRuleContext(JTypeArgumentsContext.class,i);
		}
		public List<JIdentifierContext> jIdentifier() {
			return getRuleContexts(JIdentifierContext.class);
		}
		public JClassOrInterfaceTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_jClassOrInterfaceType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).enterJClassOrInterfaceType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AntlrListener ) ((AntlrListener)listener).exitJClassOrInterfaceType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AntlrVisitor ) return ((AntlrVisitor<? extends T>)visitor).visitJClassOrInterfaceType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JClassOrInterfaceTypeContext jClassOrInterfaceType() throws RecognitionException {
		JClassOrInterfaceTypeContext _localctx = new JClassOrInterfaceTypeContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_jClassOrInterfaceType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); jIdentifier();
			setState(136);
			_la = _input.LA(1);
			if (_la==LT) {
				{
				setState(135); jTypeArguments();
				}
			}

			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(138); match(DOT);
				setState(139); jIdentifier();
				setState(141);
				_la = _input.LA(1);
				if (_la==LT) {
					{
					setState(140); jTypeArguments();
					}
				}

				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
